<resources>
    <string name="app_name">Tchello</string>
    <string name="intro_get_started_text">Let\'s get started</string>
    <string name="intro_app_description_text">Collaborate and plan together across multiple devices on Tchello\'s minimalist interface.</string>
    <string name="intro_sign_in_text">Sign In</string>
    <string name="intro_sign_out_text">Sign Up</string>
    <string name="signup_toolbar_title">Sign Up</string>
    <string name="signup_page_description_text">Enter your name, email-id and password to register with us.</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="signin_button_text">Sign In</string>
    <string name="signin_page_description_text">Enter your email and password to sign in to your account.</string>
    <string name="progress_bar_title">Loading</string>
    <string name="action_profile">Profile</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="profile_email_et_label">Email</string>
    <string name="profile_mobile_et_label">Mobile</string>
    <string name="profile_name_et_label">Name</string>
    <string name="profile_old_password_et_label">Current Password</string>
    <string name="profile_toolbar_title">Profile</string>
    <string name="profile_new_password_et_label">New Password</string>
    <string name="profile_update_button_label">Update</string>
    <string name="profile_update_password_button_label">Update Password</string>
    <string name="email_update_button_label">Update Email</string>
    <string name="add_board_button_label">Add Board</string>
    <string name="board_name_hint">Board Name</string>
    <string name="add_board_toolbar_title">Create board</string>
    <string name="cover_photo_update_button_label">Upload Photo</string>
</resources>